[package]
name = "tourist"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.89"
async-trait = "0.1.82"
axum = "0.6"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sqlx = { version = "0.8.2", features = [
    "chrono",
    "macros",
    "regexp",
    "runtime-async-std",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
thiserror = "1.0.32"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1.38", features = ["log"], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
url = { version = "2.4.0", features = ["serde"] }


